--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -5734,6 +5734,20 @@
  	 	 	"eng": "Chat Server is restarting for a update..."
  	 	}
  	},
+ 	"incorrectTimeModal": {
+ 	 	"title": {
+ 	 	 	"trans": "Ungenaue Gerätezeit",
+ 	 	 	"eng": "Inaccurate Device Time"
+ 	 	},
+ 	 	"confirm": {
+ 	 	 	"trans": "OK",
+ 	 	 	"eng": "Ok"
+ 	 	},
+ 	 	"cancel": {
+ 	 	 	"trans": "Wie synchronisieren Sie die Gerätezeit?",
+ 	 	 	"eng": "How to sync device time?"
+ 	 	}
+ 	},
  	"dungeon": {
  	 	"enemyInRoomDoorError": {
  	 	 	"trans": "Du kannst keine Tür verwenden, während ein Feind im Raum ist.",
@@ -6020,12 +6034,12 @@
  	 	 	"eng": "Insufficient bitcoin"
  	 	},
  	 	"priceSelectModal": {
- 	 	 	"title": {
+ 	 	 	"title2": {
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
  	 	 	 	],
- 	 	 	 	"trans": "Wie viel möchten Sie jeden ${itemName} verkaufen?",
- 	 	 	 	"eng": "How much would you like to sell each ${itemName} for?"
+ 	 	 	 	"trans": "Preis für ${itemName}",
+ 	 	 	 	"eng": "Price for ${itemName}"
  	 	 	}
  	 	},
  	 	"priceConfirm": {
@@ -6428,31 +6442,6 @@
  	 	 	 	 	"trans": "Neu laden",
  	 	 	 	 	"eng": "Reload"
  	 	 	 	}
- 	 	 	}
- 	 	}
- 	},
- 	"incorrectTimeModal": {
- 	 	"title": {
- 	 	 	"trans": "Ungenaue Gerätezeit",
- 	 	 	"eng": "Inaccurate Device Time"
- 	 	},
- 	 	"confirm": {
- 	 	 	"trans": "OK",
- 	 	 	"eng": "Ok"
- 	 	},
- 	 	"cancel": {
- 	 	 	"trans": "Wie synchronisieren Sie die Gerätezeit?",
- 	 	 	"eng": "How to sync device time?"
- 	 	}
- 	},
- 	"time": {
- 	 	"error": {
- 	 	 	"systemTimeIncorrectMsg": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"diff"
- 	 	 	 	],
- 	 	 	 	"trans": "Ihre Gerätezeit ist falsch. Bitte synchronisieren Sie Ihr Gerätegerät mit Netzwerk und stellen Sie sicher, dass Ihre Zeitzone korrekt eingestellt ist",
- 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
  	 	 	}
  	 	}
  	},
