--- a/contribution/lang/vi.json
+++ b/contribution/lang/vi.json
@@ -5734,6 +5734,20 @@
  	 	 	"eng": "Chat Server is restarting for a update..."
  	 	}
  	},
+ 	"incorrectTimeModal": {
+ 	 	"title": {
+ 	 	 	"trans": "Thời gian thiết bị không chính xác",
+ 	 	 	"eng": "Inaccurate Device Time"
+ 	 	},
+ 	 	"confirm": {
+ 	 	 	"trans": "Được",
+ 	 	 	"eng": "Ok"
+ 	 	},
+ 	 	"cancel": {
+ 	 	 	"trans": "Làm thế nào để đồng bộ hóa thời gian của thiết bị?",
+ 	 	 	"eng": "How to sync device time?"
+ 	 	}
+ 	},
  	"dungeon": {
  	 	"enemyInRoomDoorError": {
  	 	 	"trans": "Bạn không thể sử dụng cửa trong khi vẫn còn kẻ thù trong phòng",
@@ -6020,12 +6034,12 @@
  	 	 	"eng": "Insufficient bitcoin"
  	 	},
  	 	"priceSelectModal": {
- 	 	 	"title": {
+ 	 	 	"title2": {
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
  	 	 	 	],
- 	 	 	 	"trans": "Bạn muốn bán mỗi ${itemName} với giá bao nhiêu?",
- 	 	 	 	"eng": "How much would you like to sell each ${itemName} for?"
+ 	 	 	 	"trans": "Giá cho ${itemName}",
+ 	 	 	 	"eng": "Price for ${itemName}"
  	 	 	}
  	 	},
  	 	"priceConfirm": {
@@ -6428,31 +6442,6 @@
  	 	 	 	 	"trans": "Tải lại",
  	 	 	 	 	"eng": "Reload"
  	 	 	 	}
- 	 	 	}
- 	 	}
- 	},
- 	"incorrectTimeModal": {
- 	 	"title": {
- 	 	 	"trans": "Thời gian thiết bị không chính xác",
- 	 	 	"eng": "Inaccurate Device Time"
- 	 	},
- 	 	"confirm": {
- 	 	 	"trans": "Được",
- 	 	 	"eng": "Ok"
- 	 	},
- 	 	"cancel": {
- 	 	 	"trans": "Làm thế nào để đồng bộ hóa thời gian của thiết bị?",
- 	 	 	"eng": "How to sync device time?"
- 	 	}
- 	},
- 	"time": {
- 	 	"error": {
- 	 	 	"systemTimeIncorrectMsg": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"diff"
- 	 	 	 	],
- 	 	 	 	"trans": "Thời gian thiết bị của bạn không chính xác. Vui lòng đồng bộ hóa thiết bị của bạn với mạng và đảm bảo vùng thời gian của bạn được đặt chính xác",
- 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
  	 	 	}
  	 	}
  	},
