--- a/contribution/lang/arr.json
+++ b/contribution/lang/arr.json
@@ -5734,6 +5734,20 @@
  	 	 	"eng": "Chat Server is restarting for a update..."
  	 	}
  	},
+ 	"incorrectTimeModal": {
+ 	 	"title": {
+ 	 	 	"trans": "Inaccurate Device Time",
+ 	 	 	"eng": "Inaccurate Device Time"
+ 	 	},
+ 	 	"confirm": {
+ 	 	 	"trans": "Ok",
+ 	 	 	"eng": "Ok"
+ 	 	},
+ 	 	"cancel": {
+ 	 	 	"trans": "How to sync device time?",
+ 	 	 	"eng": "How to sync device time?"
+ 	 	}
+ 	},
  	"dungeon": {
  	 	"enemyInRoomDoorError": {
  	 	 	"trans": "Ye cannot use door while there be still enemy in room",
@@ -6020,12 +6034,12 @@
  	 	 	"eng": "Insufficient bitcoin"
  	 	},
  	 	"priceSelectModal": {
- 	 	 	"title": {
+ 	 	 	"title2": {
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
  	 	 	 	],
- 	 	 	 	"trans": "How much would you like to sell each ${itemName} for?",
- 	 	 	 	"eng": "How much would you like to sell each ${itemName} for?"
+ 	 	 	 	"trans": "Price for ${itemName}",
+ 	 	 	 	"eng": "Price for ${itemName}"
  	 	 	}
  	 	},
  	 	"priceConfirm": {
@@ -6428,31 +6442,6 @@
  	 	 	 	 	"trans": "Reload",
  	 	 	 	 	"eng": "Reload"
  	 	 	 	}
- 	 	 	}
- 	 	}
- 	},
- 	"incorrectTimeModal": {
- 	 	"title": {
- 	 	 	"trans": "Inaccurate Device Time",
- 	 	 	"eng": "Inaccurate Device Time"
- 	 	},
- 	 	"confirm": {
- 	 	 	"trans": "Ok",
- 	 	 	"eng": "Ok"
- 	 	},
- 	 	"cancel": {
- 	 	 	"trans": "How to sync device time?",
- 	 	 	"eng": "How to sync device time?"
- 	 	}
- 	},
- 	"time": {
- 	 	"error": {
- 	 	 	"systemTimeIncorrectMsg": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"diff"
- 	 	 	 	],
- 	 	 	 	"trans": "Your device time is incorrect. Please sync your device device with network and ensure your time-zone is set correctly",
- 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
  	 	 	}
  	 	}
  	},
