--- a/contribution/lang/nl.json
+++ b/contribution/lang/nl.json
@@ -5734,6 +5734,20 @@
  	 	 	"eng": "Chat Server is restarting for a update..."
  	 	}
  	},
+ 	"incorrectTimeModal": {
+ 	 	"title": {
+ 	 	 	"trans": "Onnauwkeurige apparaattijd",
+ 	 	 	"eng": "Inaccurate Device Time"
+ 	 	},
+ 	 	"confirm": {
+ 	 	 	"trans": "OK",
+ 	 	 	"eng": "Ok"
+ 	 	},
+ 	 	"cancel": {
+ 	 	 	"trans": "Hoe de tijd van het apparaat synchroniseren?",
+ 	 	 	"eng": "How to sync device time?"
+ 	 	}
+ 	},
  	"dungeon": {
  	 	"enemyInRoomDoorError": {
  	 	 	"trans": "Je kunt de deur niet gebruiken terwijl er nog vijand in de kamer is",
@@ -6020,12 +6034,12 @@
  	 	 	"eng": "Insufficient bitcoin"
  	 	},
  	 	"priceSelectModal": {
- 	 	 	"title": {
+ 	 	 	"title2": {
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
  	 	 	 	],
- 	 	 	 	"trans": "Hoeveel zou u elke ${itemName} willen verkopen?",
- 	 	 	 	"eng": "How much would you like to sell each ${itemName} for?"
+ 	 	 	 	"trans": "Prijs voor ${itemName}",
+ 	 	 	 	"eng": "Price for ${itemName}"
  	 	 	}
  	 	},
  	 	"priceConfirm": {
@@ -6428,31 +6442,6 @@
  	 	 	 	 	"trans": "Herladen",
  	 	 	 	 	"eng": "Reload"
  	 	 	 	}
- 	 	 	}
- 	 	}
- 	},
- 	"incorrectTimeModal": {
- 	 	"title": {
- 	 	 	"trans": "Onnauwkeurige apparaattijd",
- 	 	 	"eng": "Inaccurate Device Time"
- 	 	},
- 	 	"confirm": {
- 	 	 	"trans": "OK",
- 	 	 	"eng": "Ok"
- 	 	},
- 	 	"cancel": {
- 	 	 	"trans": "Hoe de tijd van het apparaat synchroniseren?",
- 	 	 	"eng": "How to sync device time?"
- 	 	}
- 	},
- 	"time": {
- 	 	"error": {
- 	 	 	"systemTimeIncorrectMsg": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"diff"
- 	 	 	 	],
- 	 	 	 	"trans": "Uw apparaattijd is onjuist. Synchroniseer uw apparaatapparaat met netwerk en zorg ervoor dat uw tijdzone correct is ingesteld",
- 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
  	 	 	}
  	 	}
  	},
