--- a/contribution/lang/tl.json
+++ b/contribution/lang/tl.json
@@ -5947,6 +5947,20 @@
  	 	 	"eng": "Chat Server is restarting for a update..."
  	 	}
  	},
+ 	"incorrectTimeModal": {
+ 	 	"title": {
+ 	 	 	"trans": "Hindi tumpak na oras ng aparato",
+ 	 	 	"eng": "Inaccurate Device Time"
+ 	 	},
+ 	 	"confirm": {
+ 	 	 	"trans": "OK",
+ 	 	 	"eng": "Ok"
+ 	 	},
+ 	 	"cancel": {
+ 	 	 	"trans": "Paano i -sync ang oras ng aparato?",
+ 	 	 	"eng": "How to sync device time?"
+ 	 	}
+ 	},
  	"dungeon": {
  	 	"enemyInRoomDoorError": {
  	 	 	"trans": "Hindi ka maaaring gumamit ng pinto habang mayroon pa ring kaaway sa silid",
@@ -6233,12 +6247,12 @@
  	 	 	"eng": "Insufficient bitcoin"
  	 	},
  	 	"priceSelectModal": {
- 	 	 	"title": {
+ 	 	 	"title2": {
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
  	 	 	 	],
- 	 	 	 	"trans": "Magkano ang nais mong ibenta ang bawat ${itemName}?",
- 	 	 	 	"eng": "How much would you like to sell each ${itemName} for?"
+ 	 	 	 	"trans": "Presyo para sa ${itemName}",
+ 	 	 	 	"eng": "Price for ${itemName}"
  	 	 	}
  	 	},
  	 	"priceConfirm": {
@@ -6641,31 +6655,6 @@
  	 	 	 	 	"trans": "Reload",
  	 	 	 	 	"eng": "Reload"
  	 	 	 	}
- 	 	 	}
- 	 	}
- 	},
- 	"incorrectTimeModal": {
- 	 	"title": {
- 	 	 	"trans": "Hindi tumpak na oras ng aparato",
- 	 	 	"eng": "Inaccurate Device Time"
- 	 	},
- 	 	"confirm": {
- 	 	 	"trans": "OK",
- 	 	 	"eng": "Ok"
- 	 	},
- 	 	"cancel": {
- 	 	 	"trans": "Paano i -sync ang oras ng aparato?",
- 	 	 	"eng": "How to sync device time?"
- 	 	}
- 	},
- 	"time": {
- 	 	"error": {
- 	 	 	"systemTimeIncorrectMsg": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"diff"
- 	 	 	 	],
- 	 	 	 	"trans": "Ang oras ng iyong aparato ay hindi tama. Mangyaring i-sync ang iyong aparato ng aparato gamit ang network at tiyakin na ang iyong time-zone ay nakatakda nang tama",
- 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
  	 	 	}
  	 	}
  	},
